# hunspell-mingw

./: CMakeLists.txt  README.md  hunspell.pro
